--- a/assets/css/scss/lsx-health-plan-admin.scss
+++ b/assets/css/scss/lsx-health-plan-admin.scss
@@ -39,7 +39,8 @@
 			width: 25%;
 		}
 		.lsx-field-col-33 {
-			width: 33.333%;
+			width: 31.333%;
+			padding-right: 2%;
 		}
 		.lsx-field-col-50 {
 			width: 50%;
